--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 body {
   overflow: hidden;
 }
+
+#mobile-nav {
+  background-color: #607d8b !important;
+}
+
+#mobile-nav li a,
+#mobile-nav li a i {
+  color: #ffffff !important;
+}
